...
        horizontalArrangement = Arrangement.spacedBy(12.dp),
        modifier = modifier.fillMaxWidth().horizontalScroll(rememberScrollState()),
    ) {
        key("dynamic") {
            val onClick = remember { { onDynamic() } }
            PhoneMockup(
                label = "Dynamic",
                selected = theme.dynamicColor,
                onClick = onClick,
                darkTheme = darkTheme,
                dynamicColor = true,
                choice = AppColorScheme.IRIDIUM,
                amoled = theme.amoled,
...
